Closed Bug 1231557 Opened 10 years ago Closed 10 years ago

Audio and video elements don't use the URL classifier

Categories

(Toolkit :: Safe Browsing, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: francois, Assigned: francois)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Because the audio and video elements open a channel without the nsIChannel::LOAD_CLASSIFY_URI loadflag, the tracking protection list doesn't apply to them.
Component: DOM: Security → Safe Browsing
Product: Core → Toolkit
Attached patch bug1231557.patch (obsolete) — Splinter Review
This patch works, but I'm not sure we need to classify the channel in those three call sites. The dom/html/HTMLMediaElement one seems to be the only one that matters.
Attachment #8697239 - Flags: feedback?(cpearce)
Comment on attachment 8697239 [details] [diff] [review] bug1231557.patch Review of attachment 8697239 [details] [diff] [review]: ----------------------------------------------------------------- I think we're better off adding the flag to all of our call sites, otherwise a site could load a video to a URL that on first load that doesn't track, and then seek the video, causing us to hit the recreate-channel path, which the server could redirect to a URL which *does* track.
Attachment #8697239 - Flags: feedback?(cpearce) → feedback+
Attached patch bug1231557.patchSplinter Review
Attachment #8697239 - Attachment is obsolete: true
Attachment #8697819 - Flags: review?(gpascutto)
Attachment #8697819 - Flags: review?(cpearce)
Attachment #8697819 - Flags: review?(cpearce) → review+
Attachment #8697819 - Flags: review?(gpascutto) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Blocks: 1207775
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: