Bug 1231557 - Use the URL Classifier in Media elements. r=cpearce,r=gcp